--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react-dom": "18.2.4",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
+        "classnames": "^2.3.2",
         "eslint": "8.41.0",
         "eslint-config-next": "13.4.3",
         "next": "13.4.3",
@@ -24,6 +25,7 @@
         "typescript": "5.0.4"
     },
     "devDependencies": {
+        "@svgr/webpack": "^8.0.1",
         "postcss": "^8.4.23",
         "prettier-plugin-css-order": "^1.3.0"
     }
