--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
         "classnames": "^2.3.2",
+        "date-fns": "^2.30.0",
         "eslint": "8.41.0",
         "eslint-config-next": "13.4.3",
         "next": "13.4.3",
