--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react-dom": "18.2.4",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
+        "axios": "^1.4.0",
         "classnames": "^2.3.2",
         "date-fns": "^2.30.0",
         "eslint": "8.41.0",
